--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main" id="main">
 
         <div class="header" id="header" style="padding: var(--gutter-l);">
-            <p style="position: absolute; font-size: .6em; opacity: .5; top: var(--gutter-l);">Press anywhere to create
+            <p style="position: absolute; font-size: .6em; opacity: .5; top: var(--gutter-l);">Click anywhere to create
                 bubbles!</p>
             <div class="login-container">
                 <button class="login">
@@ -39,7 +39,7 @@
                 <li id='nav_information'>Information</li>
                 <li id="nav_events">Events</li>
                 <li id='nav_about_us'>About Us</li>
-                <li id="nav_add_event">Add Event *</li>
+                <li id="nav_add_event" onclick="toggleAddEventPopup()">Add Event *</li>
             </ul>
         </div>
 
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="event-container">
-                    <div class="event" onclick="togglePopup()">
+                    <div class="event" onclick="toggleEventPopup()">
                         <span class=" circle"></span>
                         <div class="name">
                             Ms. Jones
@@ -105,85 +105,175 @@
                 </div>
             </div>
 
-            <!-- *********** ABOUT US *********** -->
-            <div id="about-us">
+            <!-- *********** ADD EVENT *********** -->
+            <div id="add-event-popup">
 
-            </div>
 
-            <!-- *********** POPUP *********** -->
-            <div class="pop-up-container" id="popup">
-                <div></div>
+                <form class="add-event-container">
 
-                <div id="map"></div>
-
-                <!-- _______PHP________ -->
-
-                <div class="text-container">
-
-                    <div class="pop-up-header">
-
-                        <!-- __ Naam __ -->
-                        <h3>Ms. Jones</h3>
-
-                        <!-- __ Tags __ -->
-                        <div class="tag">Tag</div>
-                        <div class="tag">Water</div>
-                        <div class="tag">Muziek</div>
+                    <div class="add-event-button-container">
+                        <input type="submit" class="submit" name="add_new_event" value="Submit"></input>
+                        <button type="dark" class="close-button" onclick="toggleAddEventPopup()">
+                            <span class="cross-line" style="transform: rotate(-45deg);""></span>
+                        <span class=" cross-line" style="transform: rotate(45deg);"></span>
+                        </button>
                     </div>
 
-                    <!-- __ Omschrijving __ -->
-                    <a href="https://www.google.com">Bekijk de website</a>
+                    <div class="subjects-container">
+                        <label style="font-weight: 500;" for="location">Main Information</label>
+                        <input placeholder="Event name" name="name" type="text">
+                        <input name="description" type="text" placeholder="Description">
+                        <input name="url" type="url" placeholder="Event URL ">
+                        <input name="date" type="date">
+                    </div>
 
-                    <!-- __ Omschrijving __ -->
-                    <p>
-                        Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
-                        Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
-                        Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
-                        Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
-                        Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
-                        Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
-                    </p>
+                    <div class="subjects-container">
+                        <label style="font-weight: 500;" for="location">Location</label>
+                        <select name="location" id="location" style="width: fit-content;">
+                            <option value="africa">Africa</option>
+                            <option value="antarctica">Antarctica</option>
+                            <option value="asia">Asia</option>
+                            <option value="europe">Europe</option>
+                            <option value="north america">North America</option>
+                            <option value="oceania">Oceania</option>
+                            <option value="south america">South America</option>
+                        </select>
+                    </div>
 
-                    <!-- __ Doelgroep __ -->
-                    <p style="font-size: .9em; font-weight: 600;">
-                        Dit is een doelgroep
-                    </p>
-                </div>
-                <div class="button-container">
-                    <button class="close-button" onclick="togglePopup()">
-                        <span class="cross-line" style="transform: rotate(-45deg);""></span>
-                        <span class=" cross-line" style="transform: rotate(45deg);"></span>
-                    </button>
-                    <button class="sign-up-button">
-                        Add
-                        <i class="gg-add"></i>
-                    </button>
-                </div>
-            </div>
+                    <div class="subjects-container">
+                        <label style="font-weight: 500;" for="location">Subjects</label>
+                        <div class="row">
+                            <input name="pollution" type="checkbox" value="pollution" placeholder="polluton">
+                            <label for="pollution">Pollution</label>
+                        </div>
 
-            <!-- *********** INFORMATION POPUP  *********** -->
-            <div id='info-popup' class="information-popup-backdrop">
-                <div class="information-popup-content">
-                    <button class="close-button " onclick="toggleInfoPopup()">
-                        <span class="cross-line" style="transform: rotate(-45deg);""></span>
-                    <span class=" cross-line" style="transform: rotate(45deg);"></span>
-                    </button>
-                </div>
+                        <div class="row">
+                            <input name="acidification" type="checkbox" value="acidification">
+                            <label for="acidification">Acidification</label>
+                        </div>
+                        <div class="row">
+                            <input name="rising_temperatures" type="checkbox" value="rising_temperatures">
+                            <label for="rising_temperatures">Rising temperatures</label>
+                        </div>
+
+                        <div class="row">
+                            <input name="eutrophication" type="checkbox" value="eutrophication">
+                            <label for="eutrophication">Eutrophication</label>
+                        </div>
+
+                        <div class="row">
+                            <input name="overfishing" type="checkbox" value="overfishing">
+                            <label for="overfishing">Overfishing</label>
+                        </div>
+                    </div>
+
+
+                    <div class="subjects-container">
+                        <label style="font-weight: 500;" for="location"> Target audience</label>
+
+                        <div class="row">
+                            <input name="academics" type="checkbox" value="academics">
+                            <label for="academics">Academics</label>
+                        </div>
+                        <div class="row">
+                            <input name="policy_makers" type="checkbox" value="policy_makers">
+                            <label for="policy_makers">Policy makers</label>
+                        </div>
+                        <div class="row">
+                            <input name="environmentalists" type="checkbox" value="environmentalists">
+                            <label for="environmentalists">Environmentalists</label>
+                        </div>
+                        <div class="row">
+                            <input name="concerned_citizens" type="checkbox" value="concerned_citizens">
+                            <label for="concerned_citizens">Concerned citizens</label>
+                        </div>
+
+                        <div class="row">
+                            <input name="students" type="checkbox" value="students">
+                            <label for="students">Students</label>
+                        </div>
+
+                    </div>
+                </form>
             </div>
         </div>
 
-        <div class="scroll-top-container"></div>
-        <script src="bubbles.js"></script>
-        <script src="index.js"></script>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-            defer>
-            </script>
-        <script src="maps.js"></script>
+        <!-- *********** ABOUT US *********** -->
+        <div id="about-us">
 
+        </div>
+
+        <!-- *********** POPUP *********** -->
+        <div class="pop-up-container" id="popup">
+            <div></div>
+
+            <div id="map"></div>
+
+            <!-- _______PHP________ -->
+
+            <div class="text-container">
+
+                <div class="pop-up-header">
+
+                    <!-- __ Naam __ -->
+                    <h3>Ms. Jones</h3>
+
+                    <!-- __ Tags __ -->
+                    <div class="tag">Tag</div>
+                    <div class="tag">Water</div>
+                    <div class="tag">Muziek</div>
+                </div>
+
+                <!-- __ Omschrijving __ -->
+                <a href="https://www.google.com">Bekijk de website</a>
+
+                <!-- __ Omschrijving __ -->
+                <p>
+                    Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
+                    Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
+                    Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
+                    Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
+                    Op dit album vind je naast de live versie van de nieuwe single “Freedom” ondermeer, “Red
+                    Bullet”, “Raining in the Snow”, “Penthouse in Heaven” en nog veel meer mooie nummers.
+                </p>
+
+                <!-- __ Doelgroep __ -->
+                <p style="font-size: .9em; font-weight: 600;">
+                    Dit is een doelgroep
+                </p>
+            </div>
+            <div class="button-container">
+                <button class="close-button" onclick="togglePopup()">
+                    <span class="cross-line" style="transform: rotate(-45deg);""></span>
+                        <span class=" cross-line" style="transform: rotate(45deg);"></span>
+                </button>
+                <button class="sign-up-button">
+                    Add
+                    <i class="gg-add"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- *********** INFORMATION POPUP  *********** -->
+        <div id='info-popup' class="information-popup-backdrop">
+            <div class="information-popup-content">
+                <button class="close-button " onclick="toggleInfoPopup()">
+                    <span class="cross-line" style="transform: rotate(-45deg);""></span>
+                    <span class=" cross-line" style="transform: rotate(45deg);"></span>
+                </button>
+            </div>
+        </div>
     </div>
 
-
+    <div class="scroll-top-container"></div>
+    <script src="bubbles.js"></script>
+    <script src="index.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+        defer>
+        </script>
+    <script src="maps.js"></script>
+    </div>
 </body>
 
 </html>
