--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
             <p style="position: absolute; font-size: .6em; opacity: .5; top: var(--gutter-l);">Click anywhere to create
                 bubbles!</p>
             <div class="login-container">
-                <button class="login">
+                <button class="login" onclick="window.location.href='./login';">
                     <i class="gg-user"></i> Log In
                 </button>
-                <a href="">Or Sign Up</a>
+                <div class="sign-up-button">
+                    <a href="./login/registration.php">Or Sign Up</a>
+                </div>
             </div>
             <div style="width:fit-content; height: fit-content; display:flex; flex-direction: column;">
                 <h1>Life Below Water</h1>
