--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div id="add-event-popup">
 
 
-                <form class="add-event-container">
+                <form action="add_event.php" method="POST" class="add-event-container">
 
                     <div class="add-event-button-container">
                         <input type="submit" class="submit" name="add_new_event" value="Submit"></input>
@@ -128,8 +128,8 @@
                     </div>
 
                     <div class="subjects-container">
-                        <label style="font-weight: 500;" for="location">Location</label>
-                        <select name="location" id="location" style="width: fit-content;">
+                        <label style="font-weight: 500;" for="country">Country</label>
+                        <select name="country" id="country" style="width: fit-content;">
                             <option value="africa">Africa</option>
                             <option value="antarctica">Antarctica</option>
                             <option value="asia">Asia</option>
