--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="subjects-container">
-                        <label style="font-weight: 500;" for="country">Country</label>
+                        <label style="font-weight: 500;" for="country">Country & address</label>
                         <select name="country" id="country" style="width: fit-content;">
                             <option value="africa">Africa</option>
                             <option value="antarctica">Antarctica</option>
@@ -140,6 +140,8 @@
                             <option value="oceania">Oceania</option>
                             <option value="south america">South America</option>
                         </select>
+                        <input name="city" type="city" placeholder="City">
+                        <input name="address" type="address" placeholder="Address">
                     </div>
 
                     <div class="subjects-container">
