--- a/index.html
+++ b/index.html
@@ -272,11 +272,15 @@
     <div class="scroll-top-container"></div>
     <script src="bubbles.js"></script>
     <script src="index.js"></script>
+    <script src="events.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
         defer>
         </script>
     <script src="maps.js"></script>
+    <script type="text/javascript">
+        var javaScriptVar = "<?php echo $result; ?>";
+    </script>
     </div>
 </body>
 
