--- a/index.html
+++ b/index.html
@@ -280,13 +280,11 @@
 
         <!-- *********** INFORMATION POPUP  *********** -->
         <div id='info-popup' class="information-popup-backdrop">
-            <div class="information-popup-content">
+            <div class="information-popup-content" id='info'>
                 <button class="close-button " onclick="toggleInfoPopup()">
                     <span class="cross-line" style="transform: rotate(-45deg);""></span>
                     <span class=" cross-line" style="transform: rotate(45deg);"></span>
                 </button>
-                <h2 id="info-header"></h2>
-                <p id="info-content"></p>
             </div>
         </div>
     </div>
