--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
             </ul>
         </div>
 
+        <!-- *********** COOKIE *********** -->
+        <div id="cookies">
+            <div class="cookie-container">
+                <div class="cookie-subcontainer">
+                    <div class="cookies">
+                        <p>This website uses cookies to ensure you get the best experience on our website.
+                        <a href=" ">More info.</a></p>
+                        <button id ="cookie-btn">Accept</button>
+                    </div>    
+                </div>
+            </div>
+        </div>    
+        <script src="cookies.js"></script>
         <div id="content">
 
             <!-- *********** INFORMATION *********** -->
