--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div id='info-popup' class="information-popup-backdrop">
             <div class="information-popup-content" id='info'>
                 <button class="close-button " onclick="toggleInfoPopup()">
-                    <span class="cross-line" style="transform: rotate(-45deg);""></span>
+                    <span class="cross-line" style="transform: rotate(-45deg);"></span>
                     <span class=" cross-line" style="transform: rotate(45deg);"></span>
                 </button>
             </div>
