--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
                 <div class="cookie-subcontainer">
                     <div class="cookies">
                         <p>This website uses cookies to ensure you get the best experience on our website.
-                        <a href=" ">More info.</a></p>
-                        <button id ="cookie-btn">Accept</button>
-                    </div>    
+                            <a href=" ">More info.</a>
+                        </p>
+                        <button id="cookie-btn">Accept</button>
+                    </div>
                 </div>
             </div>
-        </div>    
+        </div>
         <script src="cookies.js"></script>
         <div id="content">
 
@@ -309,11 +310,8 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
         defer>
-        </script>
-    <script src="maps.js"></script>
-    <script type="text/javascript">
-        var javaScriptVar = "<?php echo $result; ?>";
     </script>
+    <script src="maps.js"></script>
     </div>
 </body>
 
