--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
         defer>
     </script>
     <script src="maps.js"></script>
+    <script src="handleEvents.js"></script>
+
     </div>
 </body>
 
