--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                             Eutrophication
                         </div>
                     </div>
+                </div>
+                <div class="tile-container">
                     <div onclick="toggleInfoPopup('Acidification')" class="tile">
                         <div class="tile-content-container">
                             Acidification
@@ -87,6 +89,11 @@
                     <div onclick="toggleInfoPopup('Temperatures')" class="tile">
                         <div class="tile-content-container">
                             Rising temperatures
+                        </div>
+                    </div>
+                    <div onclick="toggleInfoPopup('Sources')" class="tile">
+                        <div class="tile-content-container">
+                            Sources & research
                         </div>
                     </div>
                 </div>
