--- a/add_event/old_add_event_form.html
+++ b/add_event/old_add_event_form.html
@@ -1,3 +1,17 @@
+<?php
+        if(isset($_POST['userid'])){
+            $_SESSION['userid']= $_POST['userid'];
+            echo "Welcome {$_SESSION['userid']}";
+        }
+
+        if (!$_SESSION['userid']){
+            echo "Please login";
+            
+        }
+?>
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
