--- a/login/register.html
+++ b/login/register.html
@@ -12,7 +12,8 @@
 <body>
 
     <div class="container">
-        <form action="" class="">
+        <canvas style="z-index:0;" id="canvas"></canvas>
+        <form style="z-index: 1;" action="" class="">
             <p style="border-bottom: 1px solid rgb(239, 239, 239); padding-bottom: .5em; padding-left: .2em ;">
                 Registreren</p>
 
@@ -27,13 +28,14 @@
                 <div id="buttons">
                     <p>Already an account? </p>
                     <a href="registration" id="sign-up">
-                        Sign Up
+                        Sign In
                     </a>
                 </div>
             </div>
     </div>
     </form>
     </div>
+    <script src="./background.js"></script>
 </body>
 
 </html>
