--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <div class="header-top">
 
                 <div style="font-size: .8em; letter-spacing: 1px; color: rgb(180, 180, 180);">
-                    <span>
+                    <p>
                         Click anywhere to
                         create
                         bubbles!
-                    </span>
+                    </p>
                     <br>
-                    <span id="bubble-count"></span>
+                    <p id="bubble-count"></p>
                 </div>
 
 
