--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                     -->
 
             <!-- *********** EVENTS *********** -->	
-            <div id="events">	
+            <div id="events" style="overflow-y: scroll;">	
             <div class="column">	
                     <h2>Upcoming Events</h2>	
-                    <div class="row" style='max-width: 100%'>	
+                    <div class="row" style='width: 100%; overflow: scroll; background-color: red;'>	
                         <select id='select-subject'onchange="filterEventsbySubjects()" name="Filter-subjects">	
                             <option value="">All subjects</option>    	
                             <option value="Pollution">Pollution</option>	
